Bug 459576 - Discover gets stuck after canceling the dialog asking if I want to proceed installing a Snap app inompatible with security sandboxing
Summary: Discover gets stuck after canceling the dialog asking if I want to proceed in...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Snap Backend (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-23 19:12 UTC by Patrick Silva
Modified: 2024-10-31 00:12 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-09-23 19:12:28 UTC
SUMMARY
Can reproduce with Sublime Text and Alacritty terminal emulator.

STEPS TO REPRODUCE
1. open Discover and search for the snap version of Sublime Text or Alacritty terminal emulator
2. click on 'Install' button of the app - a dialog shows up asking 'This snap app is not compatible with security sandboxing and will have full access to this computer. Install it anyway?', with 'Proceed' and 'Cancel' buttons
3. click on 'Cancel' button

OBSERVED RESULT
the installation is not aborted, 'Cancel' button remains in the upper right-corner, it becomes greyed out if clicked,
then Discover gets stuck and I need to kill it.

EXPECTED RESULT
installation is aborted after click on 'Cancel' button of the dialog asking 'This snap app is not compatible with security sandboxing and will have full access to this computer. Install it anyway?'

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 2 Soumyadeep Ghosh 2024-10-07 17:42:37 UTC
Fixed with this MR

https://invent.kde.org/plasma/discover/-/merge_requests/956
Comment 3 Aleix Pol 2024-10-31 00:12:56 UTC
Git commit 15dae4a17d44a67ae1cac166e543db09739b196f by Aleix Pol Gonzalez, on behalf of Soumyadeep Ghosh.
Committed on 31/10/2024 at 00:12.
Pushed by apol into branch 'master'.

snap: fix being stuck in cancelling status

M  +5    -0    libdiscover/backends/SnapBackend/SnapTransaction.cpp

https://invent.kde.org/plasma/discover/-/commit/15dae4a17d44a67ae1cac166e543db09739b196f