snap: fix being stuck in cancelling status

BUG: 459576